# xtrlock-cairo

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am
po/: POTFILES.in  zh_CN.po  zh_HK.po  zh_TW.po
src/: Makefile.am  main.c  test_cairo_xlib_simple.c  test_dummy.c  test_notify_send.c
